// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applications representations GET /applications-service/:caseId/relevant-representations should render the page 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-!-margin-left-0 govuk-!-margin-bottom-7\\">
        <div class=\\"pins-masthead-summary govuk-!-padding-4 govuk-!-padding-top-9 govuk-!-padding-bottom-2\\"><span class=\\"govuk-caption-xl\\"> mock reference </span>
            <h1 class=\\"govuk-heading-xl govuk-!-margin-bottom-3\\"> mock title </h1>
            <p class=\\"govuk-body\\">mock title</p><strong class=\\"govuk-heading-s\\"><strong class=\\"govuk-tag govuk-tag--\\">in test</strong></strong>
        </div>
    </div>
    <div class=\\"govuk-breadcrumbs\\">
        <ol class=\\"govuk-breadcrumbs__list\\">
            <li class=\\"govuk-breadcrumbs__list-item\\"><a class=\\"govuk-breadcrumbs__link\\" href=\\"/applications-service/case/1/project-documentation\\">Project documentation</a>
            </li>
            <li class=\\"govuk-breadcrumbs__list-item\\"><a class=\\"govuk-breadcrumbs__link\\" href=\\"#\\">Relevant representations</a>
            </li>
        </ol>
    </div>
    <h2 class=\\"govuk-heading-l\\">Relevant representations</h2>
    <form method=\\"GET\\">
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-grid-column-one-half\\">
                <div class=\\"pins-masthead-summary govuk-!-padding-4\\">
                    <div class=\\"govuk-form-group\\">
                        <div class=\\"filter-box\\">
                            <div class=\\"govuk-form-group\\">
                                <fieldset class=\\"govuk-fieldset\\">
                                    <legend class=\\"govuk-fieldset__legend govuk-fieldset__legend--m\\">Filter</legend>
                                    <div class=\\"govuk-checkboxes govuk-checkboxes--small\\" data-module=\\"govuk-checkboxes\\">
                                        <div class=\\"govuk-checkboxes__item\\">
                                            <input class=\\"govuk-checkboxes__input\\" id=\\"filters\\" name=\\"filters\\" type=\\"checkbox\\"
                                            value=\\"AWAITING_REVIEW\\">
                                            <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"filters\\">Awaiting review</label>
                                        </div>
                                        <div class=\\"govuk-checkboxes__item\\">
                                            <input class=\\"govuk-checkboxes__input\\" id=\\"filters-2\\" name=\\"filters\\" type=\\"checkbox\\"
                                            value=\\"REFERRED\\">
                                            <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"filters-2\\">Referred</label>
                                        </div>
                                        <div class=\\"govuk-checkboxes__item\\">
                                            <input class=\\"govuk-checkboxes__input\\" id=\\"filters-3\\" name=\\"filters\\" type=\\"checkbox\\"
                                            value=\\"INVALID\\">
                                            <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"filters-3\\">Invalid</label>
                                        </div>
                                        <div class=\\"govuk-checkboxes__item\\">
                                            <input class=\\"govuk-checkboxes__input\\" id=\\"filters-4\\" name=\\"filters\\" type=\\"checkbox\\"
                                            value=\\"VALID\\">
                                            <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"filters-4\\">Valid</label>
                                        </div>
                                        <div class=\\"govuk-checkboxes__item\\">
                                            <input class=\\"govuk-checkboxes__input\\" id=\\"filters-5\\" name=\\"filters\\" type=\\"checkbox\\"
                                            value=\\"PUBLISHED\\">
                                            <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"filters-5\\">Published</label>
                                        </div>
                                        <div class=\\"govuk-checkboxes__item\\">
                                            <input class=\\"govuk-checkboxes__input\\" id=\\"filters-6\\" name=\\"filters\\" type=\\"checkbox\\"
                                            value=\\"WITHDRAWN\\">
                                            <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"filters-6\\">Withdrawn</label>
                                        </div>
                                        <div class=\\"govuk-checkboxes__item\\">
                                            <input class=\\"govuk-checkboxes__input\\" id=\\"filters-7\\" name=\\"filters\\" type=\\"checkbox\\"
                                            value=\\"ARCHIVED\\">
                                            <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"filters-7\\">Archived</label>
                                        </div>
                                        <div class=\\"govuk-checkboxes__item\\">
                                            <input class=\\"govuk-checkboxes__input\\" id=\\"filters-8\\" name=\\"filters\\" type=\\"checkbox\\"
                                            value=\\"UNDER_18\\">
                                            <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"filters-8\\">Under 18</label>
                                        </div>
                                    </div>
                                </fieldset>
                            </div>
                        </div>
                    </div>
                    <button class=\\"govuk-button\\" id=\\"toggleButton\\" data-module=\\"govuk-button\\">Apply filters</button>
                </div>
            </div>
            <div class=\\"govuk-grid-column-one-half\\"><a href=\\"/applications-service/case/1/relevant-representations/contact-details?repType=represented\\"
                role=\\"button\\" draggable=\\"false\\" class=\\"govuk-button govuk-button--secondary\\"
                data-module=\\"govuk-button\\"> Add a representation</a>
            </div>
        </div>
        <h3 class=\\"govuk-heading-m\\">Search representations</h3>
        <input type=\\"hidden\\" name=\\"page\\" value=\\"1\\">
        <input type=\\"hidden\\" name=\\"pageSize\\" value=\\"25\\">
        <input type=\\"hidden\\" name=\\"sortBy\\" value=\\"\\">
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-grid-column-one-half\\">
                <div class=\\"govuk-form-group\\">
                    <input class=\\"govuk-input\\" id=\\"searchTerm\\" name=\\"searchTerm\\" type=\\"text\\">
                </div>
            </div>
            <div class=\\"govuk-grid-column-one-half\\">
                <button value=\\"updated\\" name=\\"searchUpdated\\" class=\\"govuk-button govuk-button--secondary\\"
                data-module=\\"govuk-button\\">Search</button>
            </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-grid-column-one-half\\">
                <p>Showing<b>1</b> to <b>3</b> of <b>3</b> results</p>
            </div>
            <div class=\\"govuk-grid-column-one-half text-align--right\\">
                <p><span class=\\"govuk-!-margin-right-2\\"><strong>Results per page</strong></span>
                    <span                     class=\\"govuk-!-margin-left-1\\"><a class=\\"govuk-link\\" href=\\"relevant-representations?page=1&amp;pageSize=25\\"><span class=\\"govuk-visually-hidden\\">View </span> 25<span class=\\"govuk-visually-hidden\\"> results per page</span></a>
                        </span><span class=\\"govuk-!-margin-left-1\\">|</span><span class=\\"govuk-!-margin-left-1\\"><a class=\\"govuk-link\\" href=\\"relevant-representations?page=1&amp;pageSize=50\\"><span class=\\"govuk-visually-hidden\\">View </span> 50
                        <span                         class=\\"govuk-visually-hidden\\">results per page</span>
                            </a>
                            </span><span class=\\"govuk-!-margin-left-1\\">|</span><span class=\\"govuk-!-margin-left-1\\"><a class=\\"govuk-link\\" href=\\"relevant-representations?page=1&amp;pageSize=100\\"><span class=\\"govuk-visually-hidden\\">View </span> 100
                            <span                             class=\\"govuk-visually-hidden\\">results per page</span>
                                </a>
                                </span>
                </p>
            </div>
        </div>
        <table id=\\"rr-table\\" class=\\"govuk-table\\">
            <thead class=\\"govuk-table__head\\">
                <tr class=\\"govuk-table__row\\">
                    <th scope=\\"col\\" class=\\"govuk-table__header\\"><a href=\\"relevant-representations?page=1&amp;sortBy=reference#rr-table\\"
                        class=\\"sort-table__link \\"> Reference<span class=\\"sort-table__link-icon  sort-table__link-icon--small \\"></span></a>
                    </th>
                    <th scope=\\"col\\" class=\\"govuk-table__header\\">From</th>
                    <th scope=\\"col\\" class=\\"govuk-table__header\\"><a href=\\"relevant-representations?page=1&amp;sortBy=received#rr-table\\"
                        class=\\"sort-table__link \\"> Date received<span class=\\"sort-table__link-icon  sort-table__link-icon--small \\"></span></a>
                    </th>
                    <th scope=\\"col\\" class=\\"govuk-table__header\\"><a href=\\"relevant-representations?page=1&amp;sortBy=redacted#rr-table\\"
                        class=\\"sort-table__link \\"> Redacted<span class=\\"sort-table__link-icon  sort-table__link-icon--small \\"></span></a>
                    </th>
                    <th scope=\\"col\\" class=\\"govuk-table__header\\"><a href=\\"relevant-representations?page=1&amp;sortBy=status#rr-table\\" class=\\"sort-table__link \\"> Status<span class=\\"sort-table__link-icon  sort-table__link-icon--small \\"></span></a>
                    </th>
                    <th scope=\\"col\\" class=\\"govuk-table__header\\">Action</th>
                </tr>
            </thead>
            <tbody class=\\"govuk-table__body\\">
                <tr class=\\"govuk-table__row\\">
                    <td class=\\"govuk-table__cell\\">mock reference</td>
                    <td class=\\"govuk-table__cell\\">org name 1</td>
                    <td class=\\"govuk-table__cell\\">01 Jan 2022</td>
                    <td class=\\"govuk-table__cell\\">Redacted</td>
                    <td class=\\"govuk-table__cell\\"><span class=\\"govuk-tag govuk-tag--grey\\" id=\\"list-convictions-status-1\\">AWAITING REVIEW</span>
                    </td>
                    <td class=\\"govuk-table__cell\\"><a href=\\"relevant-representations/1/representation-details\\"> Review </a>
                    </td>
                </tr>
                <tr class=\\"govuk-table__row\\">
                    <td class=\\"govuk-table__cell\\">mock reference</td>
                    <td class=\\"govuk-table__cell\\">first lastName</td>
                    <td class=\\"govuk-table__cell\\">01 Jan 2022</td>
                    <td class=\\"govuk-table__cell\\">Unredacted</td>
                    <td class=\\"govuk-table__cell\\"><span class=\\"govuk-tag govuk-tag\\" id=\\"list-convictions-status-2\\">VALID</span>
                    </td>
                    <td class=\\"govuk-table__cell\\"><a href=\\"relevant-representations/2/representation-details\\"> Review </a>
                    </td>
                </tr>
            </tbody>
        </table>
    </form>
</main>"
`;

exports[`applications representations GET /applications-service/:id/relevant-representations with a search term should render the page with search term 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-!-margin-left-0 govuk-!-margin-bottom-7\\">
        <div class=\\"pins-masthead-summary govuk-!-padding-4 govuk-!-padding-top-9 govuk-!-padding-bottom-2\\"><span class=\\"govuk-caption-xl\\"> mock reference </span>
            <h1 class=\\"govuk-heading-xl govuk-!-margin-bottom-3\\"> mock title </h1>
            <p class=\\"govuk-body\\">mock title</p><strong class=\\"govuk-heading-s\\"><strong class=\\"govuk-tag govuk-tag--\\">in test</strong></strong>
        </div>
    </div>
    <div class=\\"govuk-breadcrumbs\\">
        <ol class=\\"govuk-breadcrumbs__list\\">
            <li class=\\"govuk-breadcrumbs__list-item\\"><a class=\\"govuk-breadcrumbs__link\\" href=\\"/applications-service/case/1/project-documentation\\">Project documentation</a>
            </li>
            <li class=\\"govuk-breadcrumbs__list-item\\"><a class=\\"govuk-breadcrumbs__link\\" href=\\"#\\">Relevant representations</a>
            </li>
        </ol>
    </div>
    <h2 class=\\"govuk-heading-l\\">Relevant representations</h2>
    <form method=\\"GET\\">
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-grid-column-one-half\\">
                <div class=\\"pins-masthead-summary govuk-!-padding-4\\">
                    <div class=\\"govuk-form-group\\">
                        <div class=\\"filter-box\\">
                            <div class=\\"govuk-form-group\\">
                                <fieldset class=\\"govuk-fieldset\\">
                                    <legend class=\\"govuk-fieldset__legend govuk-fieldset__legend--m\\">Filter</legend>
                                    <div class=\\"govuk-checkboxes govuk-checkboxes--small\\" data-module=\\"govuk-checkboxes\\">
                                        <div class=\\"govuk-checkboxes__item\\">
                                            <input class=\\"govuk-checkboxes__input\\" id=\\"filters\\" name=\\"filters\\" type=\\"checkbox\\"
                                            value=\\"AWAITING_REVIEW\\">
                                            <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"filters\\">Awaiting review</label>
                                        </div>
                                        <div class=\\"govuk-checkboxes__item\\">
                                            <input class=\\"govuk-checkboxes__input\\" id=\\"filters-2\\" name=\\"filters\\" type=\\"checkbox\\"
                                            value=\\"REFERRED\\">
                                            <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"filters-2\\">Referred</label>
                                        </div>
                                        <div class=\\"govuk-checkboxes__item\\">
                                            <input class=\\"govuk-checkboxes__input\\" id=\\"filters-3\\" name=\\"filters\\" type=\\"checkbox\\"
                                            value=\\"INVALID\\">
                                            <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"filters-3\\">Invalid</label>
                                        </div>
                                        <div class=\\"govuk-checkboxes__item\\">
                                            <input class=\\"govuk-checkboxes__input\\" id=\\"filters-4\\" name=\\"filters\\" type=\\"checkbox\\"
                                            value=\\"VALID\\">
                                            <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"filters-4\\">Valid</label>
                                        </div>
                                        <div class=\\"govuk-checkboxes__item\\">
                                            <input class=\\"govuk-checkboxes__input\\" id=\\"filters-5\\" name=\\"filters\\" type=\\"checkbox\\"
                                            value=\\"PUBLISHED\\">
                                            <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"filters-5\\">Published</label>
                                        </div>
                                        <div class=\\"govuk-checkboxes__item\\">
                                            <input class=\\"govuk-checkboxes__input\\" id=\\"filters-6\\" name=\\"filters\\" type=\\"checkbox\\"
                                            value=\\"WITHDRAWN\\">
                                            <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"filters-6\\">Withdrawn</label>
                                        </div>
                                        <div class=\\"govuk-checkboxes__item\\">
                                            <input class=\\"govuk-checkboxes__input\\" id=\\"filters-7\\" name=\\"filters\\" type=\\"checkbox\\"
                                            value=\\"ARCHIVED\\">
                                            <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"filters-7\\">Archived</label>
                                        </div>
                                        <div class=\\"govuk-checkboxes__item\\">
                                            <input class=\\"govuk-checkboxes__input\\" id=\\"filters-8\\" name=\\"filters\\" type=\\"checkbox\\"
                                            value=\\"UNDER_18\\">
                                            <label class=\\"govuk-label govuk-checkboxes__label\\" for=\\"filters-8\\">Under 18</label>
                                        </div>
                                    </div>
                                </fieldset>
                            </div>
                        </div>
                    </div>
                    <button class=\\"govuk-button\\" id=\\"toggleButton\\" data-module=\\"govuk-button\\">Apply filters</button>
                </div>
            </div>
            <div class=\\"govuk-grid-column-one-half\\"><a href=\\"/applications-service/case/1/relevant-representations/contact-details?repType=represented\\"
                role=\\"button\\" draggable=\\"false\\" class=\\"govuk-button govuk-button--secondary\\"
                data-module=\\"govuk-button\\"> Add a representation</a>
            </div>
        </div>
        <h3 class=\\"govuk-heading-m\\">Search representations</h3>
        <input type=\\"hidden\\" name=\\"page\\" value=\\"1\\">
        <input type=\\"hidden\\" name=\\"pageSize\\" value=\\"25\\">
        <input type=\\"hidden\\" name=\\"sortBy\\" value=\\"\\">
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-grid-column-one-half\\">
                <div class=\\"govuk-form-group\\">
                    <input class=\\"govuk-input\\" id=\\"searchTerm\\" name=\\"searchTerm\\" type=\\"text\\"
                    value=\\"mock-search-term\\">
                </div>
            </div>
            <div class=\\"govuk-grid-column-one-half\\">
                <button value=\\"updated\\" name=\\"searchUpdated\\" class=\\"govuk-button govuk-button--secondary\\"
                data-module=\\"govuk-button\\">Search</button>
            </div>
        </div>
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-grid-column-one-half\\">
                <p>Showing<b>1</b> to <b>3</b> of <b>3</b> results</p>
            </div>
            <div class=\\"govuk-grid-column-one-half text-align--right\\">
                <p><span class=\\"govuk-!-margin-right-2\\"><strong>Results per page</strong></span>
                    <span                     class=\\"govuk-!-margin-left-1\\"><a class=\\"govuk-link\\" href=\\"relevant-representations?searchTerm=mock-search-term&amp;page=1&amp;pageSize=25\\"><span class=\\"govuk-visually-hidden\\">View </span> 25<span class=\\"govuk-visually-hidden\\"> results per page</span></a>
                        </span><span class=\\"govuk-!-margin-left-1\\">|</span><span class=\\"govuk-!-margin-left-1\\"><a class=\\"govuk-link\\" href=\\"relevant-representations?searchTerm=mock-search-term&amp;page=1&amp;pageSize=50\\"><span class=\\"govuk-visually-hidden\\">View </span> 50
                        <span                         class=\\"govuk-visually-hidden\\">results per page</span>
                            </a>
                            </span><span class=\\"govuk-!-margin-left-1\\">|</span><span class=\\"govuk-!-margin-left-1\\"><a class=\\"govuk-link\\" href=\\"relevant-representations?searchTerm=mock-search-term&amp;page=1&amp;pageSize=100\\"><span class=\\"govuk-visually-hidden\\">View </span> 100
                            <span                             class=\\"govuk-visually-hidden\\">results per page</span>
                                </a>
                                </span>
                </p>
            </div>
        </div>
        <table id=\\"rr-table\\" class=\\"govuk-table\\">
            <thead class=\\"govuk-table__head\\">
                <tr class=\\"govuk-table__row\\">
                    <th scope=\\"col\\" class=\\"govuk-table__header\\"><a href=\\"relevant-representations?searchTerm=mock-search-term&amp;page=1&amp;sortBy=reference#rr-table\\"
                        class=\\"sort-table__link \\"> Reference<span class=\\"sort-table__link-icon  sort-table__link-icon--small \\"></span></a>
                    </th>
                    <th scope=\\"col\\" class=\\"govuk-table__header\\">From</th>
                    <th scope=\\"col\\" class=\\"govuk-table__header\\"><a href=\\"relevant-representations?searchTerm=mock-search-term&amp;page=1&amp;sortBy=received#rr-table\\"
                        class=\\"sort-table__link \\"> Date received<span class=\\"sort-table__link-icon  sort-table__link-icon--small \\"></span></a>
                    </th>
                    <th scope=\\"col\\" class=\\"govuk-table__header\\"><a href=\\"relevant-representations?searchTerm=mock-search-term&amp;page=1&amp;sortBy=redacted#rr-table\\"
                        class=\\"sort-table__link \\"> Redacted<span class=\\"sort-table__link-icon  sort-table__link-icon--small \\"></span></a>
                    </th>
                    <th scope=\\"col\\" class=\\"govuk-table__header\\"><a href=\\"relevant-representations?searchTerm=mock-search-term&amp;page=1&amp;sortBy=status#rr-table\\"
                        class=\\"sort-table__link \\"> Status<span class=\\"sort-table__link-icon  sort-table__link-icon--small \\"></span></a>
                    </th>
                    <th scope=\\"col\\" class=\\"govuk-table__header\\">Action</th>
                </tr>
            </thead>
            <tbody class=\\"govuk-table__body\\">
                <tr class=\\"govuk-table__row\\">
                    <td class=\\"govuk-table__cell\\">mock reference</td>
                    <td class=\\"govuk-table__cell\\">org name 1</td>
                    <td class=\\"govuk-table__cell\\">01 Jan 2022</td>
                    <td class=\\"govuk-table__cell\\">Redacted</td>
                    <td class=\\"govuk-table__cell\\"><span class=\\"govuk-tag govuk-tag--grey\\" id=\\"list-convictions-status-1\\">AWAITING REVIEW</span>
                    </td>
                    <td class=\\"govuk-table__cell\\"><a href=\\"relevant-representations/1/representation-details\\"> Review </a>
                    </td>
                </tr>
            </tbody>
        </table>
    </form>
</main>"
`;
